A favicon and a new version of AsciiC64Network
Former-commit-id: 86c4fdcf4cb7e2676c14d3fedbd139e0dd4b1b33

--- a/web/static/css/player.css
+++ b/web/static/css/player.css
@@ -1,5 +1,5 @@
 .nav-links a.active {
-    background-color: #83af4c;
+    background-color: #8fc947;
     color: rgb(32 32 25);
 }
 .nav-links a.active .material-icons {
